src/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
//************************************************
// AUTHOR: Pablo Arrighi (pablo.arrighi@imag.fr)
// DATE: January 2008
//************************************************
public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected static JJTParserState jjtree = new JJTParserState();

  static final public ASTStart start() throws ParseException {
    trace_call("start");
    try {
  /*@bgen(jjtree) #Start( 1) */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        term();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
          jj_consume_token(0);
          break;
        case 34:
          jj_consume_token(34);
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
          jjtree.closeNodeScope(jjtn000,  1);
          jjtc000 = false;
         {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  1);
          }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("start");
    }
  }

  static final public void simpleterm() throws ParseException {
    trace_call("simpleterm");
    try {
 Token t;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case fun:
        fun();
        break;
      case let:
        let();
        break;
      case mif:
        mif();
        break;
      case mtrue:
        jj_consume_token(mtrue);
                                          ASTBool jjtn001 = new ASTBool(JJTBOOL);
                                          boolean jjtc001 = true;
                                          jjtree.openNodeScope(jjtn001);
        try {
                                          jjtree.closeNodeScope(jjtn001,  0);
                                          jjtc001 = false;
                                         jjtn001.value=true;
        } finally {
                                          if (jjtc001) {
                                            jjtree.closeNodeScope(jjtn001,  0);
                                          }
        }
        break;
      case mfalse:
        jj_consume_token(mfalse);
                                          ASTBool jjtn002 = new ASTBool(JJTBOOL);
                                          boolean jjtc002 = true;
                                          jjtree.openNodeScope(jjtn002);
        try {
                                          jjtree.closeNodeScope(jjtn002,  0);
                                          jjtc002 = false;
                                         jjtn002.value=false;
        } finally {
                                          if (jjtc002) {
                                            jjtree.closeNodeScope(jjtn002,  0);
                                          }
        }
        break;
      case 35:
        jj_consume_token(35);
                ASTNot jjtn003 = new ASTNot(JJTNOT);
                boolean jjtc003 = true;
                jjtree.openNodeScope(jjtn003);
        try {
          simpleterm();
        } catch (Throwable jjte003) {
                if (jjtc003) {
                  jjtree.clearNodeScope(jjtn003);
                  jjtc003 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte003 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte003;}
                }
                if (jjte003 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte003;}
                }
                {if (true) throw (Error)jjte003;}
        } finally {
                if (jjtc003) {
                  jjtree.closeNodeScope(jjtn003,  1);
                }
        }
        break;
      case NUM:
        t = jj_consume_token(NUM);
                                          ASTInt jjtn004 = new ASTInt(JJTINT);
                                          boolean jjtc004 = true;
                                          jjtree.openNodeScope(jjtn004);
        try {
                                          jjtree.closeNodeScope(jjtn004,  0);
                                          jjtc004 = false;
                                         jjtn004.value=Integer.parseInt(t.image);
        } finally {
                                          if (jjtc004) {
                                            jjtree.closeNodeScope(jjtn004,  0);
                                          }
        }
        break;
      case 36:
        jj_consume_token(36);
                ASTOpp jjtn005 = new ASTOpp(JJTOPP);
                boolean jjtc005 = true;
                jjtree.openNodeScope(jjtn005);
        try {
          simpleterm();
        } catch (Throwable jjte005) {
                if (jjtc005) {
                  jjtree.clearNodeScope(jjtn005);
                  jjtc005 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte005 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte005;}
                }
                if (jjte005 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte005;}
                }
                {if (true) throw (Error)jjte005;}
        } finally {
                if (jjtc005) {
                  jjtree.closeNodeScope(jjtn005,  1);
                }
        }
        break;
      case 37:
        jj_consume_token(37);
        t = jj_consume_token(NUM);
                                  ASTRef jjtn006 = new ASTRef(JJTREF);
                                  boolean jjtc006 = true;
                                  jjtree.openNodeScope(jjtn006);
        try {
                                  jjtree.closeNodeScope(jjtn006,  0);
                                  jjtc006 = false;
                         jjtn006.value=Integer.parseInt(t.image);
        } finally {
                                  if (jjtc006) {
                                    jjtree.closeNodeScope(jjtn006,  0);
                                  }
        }
        break;
      case mnull:
            ASTNull jjtn007 = new ASTNull(JJTNULL);
            boolean jjtc007 = true;
            jjtree.openNodeScope(jjtn007);
        try {
          jj_consume_token(mnull);
        } finally {
            if (jjtc007) {
              jjtree.closeNodeScope(jjtn007,  0);
            }
        }
        break;
      case print:
        jj_consume_token(print);
                    ASTPrint jjtn008 = new ASTPrint(JJTPRINT);
                    boolean jjtc008 = true;
                    jjtree.openNodeScope(jjtn008);
        try {
          simpleterm();
        } catch (Throwable jjte008) {
                    if (jjtc008) {
                      jjtree.clearNodeScope(jjtn008);
                      jjtc008 = false;
                    } else {
                      jjtree.popNode();
                    }
                    if (jjte008 instanceof RuntimeException) {
                      {if (true) throw (RuntimeException)jjte008;}
                    }
                    if (jjte008 instanceof ParseException) {
                      {if (true) throw (ParseException)jjte008;}
                    }
                    {if (true) throw (Error)jjte008;}
        } finally {
                    if (jjtc008) {
                      jjtree.closeNodeScope(jjtn008,  1);
                    }
        }
        break;
      case recv:
        recv();
        break;
      case send:
        send();
        break;
      case at:
        mnew();
        break;
      case TERMVAR:
        termvar();
        break;
      case 38:
        jj_consume_token(38);
        term();
        jj_consume_token(39);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("simpleterm");
    }
  }

  static final public void term() throws ParseException {
    trace_call("term");
    try {
  int i=1;
      simpleterm();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case fun:
      case mif:
      case let:
      case mtrue:
      case mfalse:
      case and:
      case or:
      case eq:
      case leq:
      case geq:
      case mnull:
      case print:
      case recv:
      case send:
      case at:
      case NUM:
      case TERMVAR:
      case 35:
      case 36:
      case 37:
      case 38:
      case 40:
      case 41:
      case 42:
      case 43:
      case 44:
      case 45:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case and:
            ASTAnd jjtn001 = new ASTAnd(JJTAND);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
          try {
            label_1:
            while (true) {
              jj_consume_token(and);
              simpleterm();
                               i++;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case and:
                ;
                break;
              default:
                jj_la1[2] = jj_gen;
                break label_1;
              }
            }
          } catch (Throwable jjte001) {
            if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
          } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001,  i);
            }
          }
          break;
        case or:
            ASTOr jjtn002 = new ASTOr(JJTOR);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
          try {
            label_2:
            while (true) {
              jj_consume_token(or);
              simpleterm();
                              i++;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case or:
                ;
                break;
              default:
                jj_la1[3] = jj_gen;
                break label_2;
              }
            }
          } catch (Throwable jjte002) {
            if (jjtc002) {
              jjtree.clearNodeScope(jjtn002);
              jjtc002 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte002 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte002;}
            }
            if (jjte002 instanceof ParseException) {
              {if (true) throw (ParseException)jjte002;}
            }
            {if (true) throw (Error)jjte002;}
          } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002,  i);
            }
          }
          break;
        case 40:
          jj_consume_token(40);
                ASTIdy jjtn003 = new ASTIdy(JJTIDY);
                boolean jjtc003 = true;
                jjtree.openNodeScope(jjtn003);
          try {
            simpleterm();
          } catch (Throwable jjte003) {
                if (jjtc003) {
                  jjtree.clearNodeScope(jjtn003);
                  jjtc003 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte003 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte003;}
                }
                if (jjte003 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte003;}
                }
                {if (true) throw (Error)jjte003;}
          } finally {
                if (jjtc003) {
                  jjtree.closeNodeScope(jjtn003,  2);
                }
          }
          break;
        case eq:
          jj_consume_token(eq);
                 ASTEq jjtn004 = new ASTEq(JJTEQ);
                 boolean jjtc004 = true;
                 jjtree.openNodeScope(jjtn004);
          try {
            simpleterm();
          } catch (Throwable jjte004) {
                 if (jjtc004) {
                   jjtree.clearNodeScope(jjtn004);
                   jjtc004 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte004 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte004;}
                 }
                 if (jjte004 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte004;}
                 }
                 {if (true) throw (Error)jjte004;}
          } finally {
                 if (jjtc004) {
                   jjtree.closeNodeScope(jjtn004,  2);
                 }
          }
          break;
        case leq:
          jj_consume_token(leq);
                  ASTLeq jjtn005 = new ASTLeq(JJTLEQ);
                  boolean jjtc005 = true;
                  jjtree.openNodeScope(jjtn005);
          try {
            simpleterm();
          } catch (Throwable jjte005) {
                  if (jjtc005) {
                    jjtree.clearNodeScope(jjtn005);
                    jjtc005 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte005 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte005;}
                  }
                  if (jjte005 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte005;}
                  }
                  {if (true) throw (Error)jjte005;}
          } finally {
                  if (jjtc005) {
                    jjtree.closeNodeScope(jjtn005,  2);
                  }
          }
          break;
        case geq:
          jj_consume_token(geq);
                  ASTGeq jjtn006 = new ASTGeq(JJTGEQ);
                  boolean jjtc006 = true;
                  jjtree.openNodeScope(jjtn006);
          try {
            simpleterm();
          } catch (Throwable jjte006) {
                  if (jjtc006) {
                    jjtree.clearNodeScope(jjtn006);
                    jjtc006 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte006 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte006;}
                  }
                  if (jjte006 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte006;}
                  }
                  {if (true) throw (Error)jjte006;}
          } finally {
                  if (jjtc006) {
                    jjtree.closeNodeScope(jjtn006,  2);
                  }
          }
          break;
        case 41:
          jj_consume_token(41);
                ASTLt jjtn007 = new ASTLt(JJTLT);
                boolean jjtc007 = true;
                jjtree.openNodeScope(jjtn007);
          try {
            simpleterm();
          } catch (Throwable jjte007) {
                if (jjtc007) {
                  jjtree.clearNodeScope(jjtn007);
                  jjtc007 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte007 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte007;}
                }
                if (jjte007 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte007;}
                }
                {if (true) throw (Error)jjte007;}
          } finally {
                if (jjtc007) {
                  jjtree.closeNodeScope(jjtn007,  2);
                }
          }
          break;
        case 42:
          jj_consume_token(42);
                ASTGt jjtn008 = new ASTGt(JJTGT);
                boolean jjtc008 = true;
                jjtree.openNodeScope(jjtn008);
          try {
            simpleterm();
          } catch (Throwable jjte008) {
                if (jjtc008) {
                  jjtree.clearNodeScope(jjtn008);
                  jjtc008 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte008 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte008;}
                }
                if (jjte008 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte008;}
                }
                {if (true) throw (Error)jjte008;}
          } finally {
                if (jjtc008) {
                  jjtree.closeNodeScope(jjtn008,  2);
                }
          }
          break;
        case 43:
            ASTAdd jjtn009 = new ASTAdd(JJTADD);
            boolean jjtc009 = true;
            jjtree.openNodeScope(jjtn009);
          try {
            label_3:
            while (true) {
              jj_consume_token(43);
              simpleterm();
                             i++;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case 43:
                ;
                break;
              default:
                jj_la1[4] = jj_gen;
                break label_3;
              }
            }
          } catch (Throwable jjte009) {
            if (jjtc009) {
              jjtree.clearNodeScope(jjtn009);
              jjtc009 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte009 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte009;}
            }
            if (jjte009 instanceof ParseException) {
              {if (true) throw (ParseException)jjte009;}
            }
            {if (true) throw (Error)jjte009;}
          } finally {
            if (jjtc009) {
              jjtree.closeNodeScope(jjtn009,  i);
            }
          }
          break;
        case 44:
            ASTMult jjtn010 = new ASTMult(JJTMULT);
            boolean jjtc010 = true;
            jjtree.openNodeScope(jjtn010);
          try {
            label_4:
            while (true) {
              jj_consume_token(44);
              simpleterm();
                             i++;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case 44:
                ;
                break;
              default:
                jj_la1[5] = jj_gen;
                break label_4;
              }
            }
          } catch (Throwable jjte010) {
            if (jjtc010) {
              jjtree.clearNodeScope(jjtn010);
              jjtc010 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte010 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte010;}
            }
            if (jjte010 instanceof ParseException) {
              {if (true) throw (ParseException)jjte010;}
            }
            {if (true) throw (Error)jjte010;}
          } finally {
            if (jjtc010) {
              jjtree.closeNodeScope(jjtn010,  i);
            }
          }
          break;
        case 45:
            ASTSeq jjtn011 = new ASTSeq(JJTSEQ);
            boolean jjtc011 = true;
            jjtree.openNodeScope(jjtn011);
          try {
            label_5:
            while (true) {
              jj_consume_token(45);
              simpleterm();
                             i++;
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case 45:
                ;
                break;
              default:
                jj_la1[6] = jj_gen;
                break label_5;
              }
            }
          } catch (Throwable jjte011) {
            if (jjtc011) {
              jjtree.clearNodeScope(jjtn011);
              jjtc011 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte011 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte011;}
            }
            if (jjte011 instanceof ParseException) {
              {if (true) throw (ParseException)jjte011;}
            }
            {if (true) throw (Error)jjte011;}
          } finally {
            if (jjtc011) {
              jjtree.closeNodeScope(jjtn011,  i);
            }
          }
          break;
        case fun:
        case mif:
        case let:
        case mtrue:
        case mfalse:
        case mnull:
        case print:
        case recv:
        case send:
        case at:
        case NUM:
        case TERMVAR:
        case 35:
        case 36:
        case 37:
        case 38:
            ASTApp jjtn012 = new ASTApp(JJTAPP);
            boolean jjtc012 = true;
            jjtree.openNodeScope(jjtn012);
          try {
            term();
          } catch (Throwable jjte012) {
            if (jjtc012) {
              jjtree.clearNodeScope(jjtn012);
              jjtc012 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte012 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte012;}
            }
            if (jjte012 instanceof ParseException) {
              {if (true) throw (ParseException)jjte012;}
            }
            {if (true) throw (Error)jjte012;}
          } finally {
            if (jjtc012) {
              jjtree.closeNodeScope(jjtn012,  2);
            }
          }
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } finally {
      trace_return("term");
    }
  }

  static final public void interm() throws ParseException {
    trace_call("interm");
    try {
  /*@bgen(jjtree) #Seq(> 1) */
  ASTSeq jjtn000 = new ASTSeq(JJTSEQ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(in);
        simpleterm();
        label_6:
        while (true) {
          if (jj_2_1(2147483647)) {
            ;
          } else {
            break label_6;
          }
          jj_consume_token(45);
          simpleterm();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
          }
      }
    } finally {
      trace_return("interm");
    }
  }

  static final public void termvar() throws ParseException {
    trace_call("termvar");
    try {
  Token t;
      t = jj_consume_token(TERMVAR);
                                          ASTTermVar jjtn001 = new ASTTermVar(JJTTERMVAR);
                                          boolean jjtc001 = true;
                                          jjtree.openNodeScope(jjtn001);
      try {
                                          jjtree.closeNodeScope(jjtn001,  0);
                                          jjtc001 = false;
                                         jjtn001.value=t.image; jjtn001.line=t.beginLine; jjtn001.column=t.beginColumn;
      } finally {
                                          if (jjtc001) {
                                            jjtree.closeNodeScope(jjtn001,  0);
                                          }
      }
    } finally {
      trace_return("termvar");
    }
  }

  static final public void fun() throws ParseException {
    trace_call("fun");
    try {
  /*@bgen(jjtree) #Fun( 3) */
  ASTFun jjtn000 = new ASTFun(JJTFUN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(fun);
        type();
        termvar();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 46:
          funcont();
          break;
        case mapsto:
          funend();
          break;
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  3);
          }
      }
    } finally {
      trace_return("fun");
    }
  }

  static final public void funcont() throws ParseException {
    trace_call("funcont");
    try {
  /*@bgen(jjtree) #Fun( 3) */
  ASTFun jjtn000 = new ASTFun(JJTFUN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(46);
        type();
        termvar();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 46:
          funcont();
          break;
        case mapsto:
          funend();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  3);
          }
      }
    } finally {
      trace_return("funcont");
    }
  }

  static final public void funend() throws ParseException {
    trace_call("funend");
    try {
      jj_consume_token(mapsto);
      simpleterm();
    } finally {
      trace_return("funend");
    }
  }

  static final public void let() throws ParseException {
    trace_call("let");
    try {
  /*@bgen(jjtree) #Let( 4) */
  ASTLet jjtn000 = new ASTLet(JJTLET);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(let);
        type();
        termvar();
        jj_consume_token(set);
        term();
        interm();
      } catch (Throwable jjte000) {
           if (jjtc000) {
             jjtree.clearNodeScope(jjtn000);
             jjtc000 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte000 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte000;}
           }
           if (jjte000 instanceof ParseException) {
             {if (true) throw (ParseException)jjte000;}
           }
           {if (true) throw (Error)jjte000;}
      } finally {
           if (jjtc000) {
             jjtree.closeNodeScope(jjtn000,  4);
           }
      }
    } finally {
      trace_return("let");
    }
  }

  static final public void mif() throws ParseException {
    trace_call("mif");
    try {
  /*@bgen(jjtree) #If( 3) */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(mif);
        term();
        jj_consume_token(mthen);
        simpleterm();
        jj_consume_token(melse);
        simpleterm();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  3);
          }
      }
    } finally {
      trace_return("mif");
    }
  }

  static final public void recv() throws ParseException {
    trace_call("recv");
    try {
  /*@bgen(jjtree) #Recv( 4) */
  ASTRecv jjtn000 = new ASTRecv(JJTRECV);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(recv);
        type();
        termvar();
        jj_consume_token(from);
        termvar();
        interm();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  4);
          }
      }
    } finally {
      trace_return("recv");
    }
  }

  static final public void send() throws ParseException {
    trace_call("send");
    try {
  /*@bgen(jjtree) #Send( 2) */
  ASTSend jjtn000 = new ASTSend(JJTSEND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(send);
        term();
        jj_consume_token(to);
        simpleterm();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  2);
          }
      }
    } finally {
      trace_return("send");
    }
  }

  static final public void mnew() throws ParseException {
    trace_call("mnew");
    try {
  /*@bgen(jjtree) #New( 3) */
  ASTNew jjtn000 = new ASTNew(JJTNEW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(at);
        termvar();
        jj_consume_token(mnew);
        term();
        interm();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  3);
          }
      }
    } finally {
      trace_return("mnew");
    }
  }
